# substreams_firehose

./: .gitignore  .pylintrc  LICENSE  README.md  TODO.md  args.py  exceptions.py  index.ipynb  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sample.env  test.py  tsconfig.json  utils.py
.github/workflows/: docs.yml  firehose.yml  firehose_daily_extraction.yml  pylint.yml  static.yml  test.yml  update_index_notebook.yml
adapters/: index.ts  tether.ts  transactions.ts  transfers.ts  voteproducer.ts
adapters/activity/: README.md
adapters/financials/: README.md
adapters/resources/: README.md  cpu.ts  index.ts  ram.ts  rex.ts
adapters/tether/: index.ts
block_extractors_explained/: README.md
block_processors/: default.py
docs/: README.md  _config.yml  index.html  search.js  substreams_firehose.html
docs/block_extractors/: async_multi_channel.md  async_optimized.md  async_single_channel.md  common.md  index.md
docs/block_extractors_explained/: README.md
docs/block_processors/: index.md
docs/pyfirehose/: args.md  config.md  exceptions.md  index.md  module.md  utils.md
docs/substreams_firehose/: __about__.html  args.html  block_extractors.html  block_processors.html  config.html  exceptions.html  requests.html  tests.html  utils.html
examples/: block.json
jsonl/: eos_eosio.vpay_eosio.bpay_272368521_to_272540290.jsonl  eosio.vpay_eosio.bpay_272368521_to_272540290.jsonl  out.jsonl
jsonl/producerpay/: 2022-10-20.jsonl  2022-10-21.jsonl  2022-10-22.jsonl  2022-10-23.jsonl  2022-10-24.jsonl  2022-10-25.jsonl  2022-10-26.jsonl  2022-10-27.jsonl  2022-10-28.jsonl  2022-10-29.jsonl  2022-10-30.jsonl  2022-10-31.jsonl  2022-11-01.jsonl  2022-11-02.jsonl  2022-11-06.jsonl  2022-11-07.jsonl  2022-11-08.jsonl  2022-11-09.jsonl  2022-11-10.jsonl  2022-11-11.jsonl  2022-11-12.jsonl  (+31 more)
proto/: codec_pb2.py
pyfirehose/: __about__.py  __main__.py  args.py  config.py  exceptions.py  sample.config.hjson  sample.env  test.py  utils.py
scripts/: build_docs.sh  build_proto.sh  daily.ts  history.ts  make_demo.sh  producerpay.sh  publish_package.sh  scripted_demo.tape  test_firehose.ts  test_grpc.ts
site/: 404.html  index.html  index.ipynb  requirements.txt  search.html
src/: config.ts  dfuse.ts  firehose.d.ts  utils.spec.ts  utils.ts
substreams_firehose/: __about__.py  __init__.py  __main__.py  args.py  exceptions.py  requests.py  sample.config.hjson  utils.py
(+809 files in other folders)
